--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^3.1.0
   dio: ^2.1.16
+  fluttertoast: ^3.1.2
 
 dev_dependencies:
   flutter_test:
